feat(encoding): reencode index7* series to utf-8

--- a/index7e18.html
+++ b/index7e18.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Вы задумывались, когда-нибудь об открытии собственного бизнеса?  Самому решать что и когда делать. Самому решать с кем и как работать. Быть хозяином собственному времени и собственным результатам. А главное - знать, что твои усилия создают твое будущее, а не чужое.  И, в конечном итоге, через 3-5 лет иметь свободу и жизнь, которую хочешь.  Если Вы с этим согласны, но своего бизнеса у Вас по прежнему нет, то что помешало Вам? (и не помешало другим)  Каковы бы ни были субъективные причины, объективные сводятся к одной - невозможность рискнуть всем что имеешь ради идеи, успех которой не гарантирован.  А если бы он был гарантирован?" />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
