--- a/print7112.html
+++ b/print7112.html
@@ -1,10 +1,10 @@
 <html>
-<title>Àóäèî</title>
+<title>Аудио</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=audio by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:17:10 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='àóäèî, òðàíñ, òðàíñû, óïðàæíåíèÿ'>
-<meta name="description" content='Àóäèî-óïðàæíåíèÿ, òðàíñû'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='аудио, транс, трансы, упражнения'>
+<meta name="description" content='Аудио-упражнения, трансы'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Àóäèî</h1><a href=index7112.html?id=audio class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='F4AC0.html'>Èíòóèöèÿ è áåññîçíàòåëüíîå</a></h2></li><li><h2><a href='F4AD6.html'>Ëè÷íàÿ ýôôåêòèâíîñòü</a></h2></li><li><h2><a href='F4AD7.html'>Îòêðûòèå áèçíåñà</a></h2></li><li><h2><a href='F4ADA.html'>Áèçíåñ îáó÷åíèå</a></h2></li><li><h2><a href='F4ABF.html'>Ðàáîòà ñ íåãàòèâíûìè ýìîöèÿìè, ñòðàõîì</a></h2></li><li><h2><a href='F4AD8.html'>Âçàèìîîòíîøåíèÿ ñ ëþäüìè</a></h2></li><li><h2><a href='F4AD9.html'>Ñìåíà ïðîôåññèîíàëüíîé äåÿòåëüíîñòè</a></h2></li><li><h2><a href='F4ABE.html'>Êàê ýôôåêòèâíî ó÷èòüñÿ íà òðåíèíãàõ?</a></h2></li><li><h2><a href='F477A.html'>×òî òàêîå êîó÷èíã? (èíòåðâüþ)</a></h2>Èíòåðâüþ ñ Åãîðîì Áóëûãèíûì, âçÿòîå Äåíèñîì Ñû÷îì ñïåöèàëüíî äëÿ GreatCoach.ru</li><li><h2><a href='F486A.html'>Ñòàòüè è êîïèðàéòèíã</a></h2>Êàê íà÷àòü ïèñàòü óâëåêàòåëüíûå ñòàòüè</li><li><h2><a href='skazki2012.html'>Èíäèéñêèå ñêàçêè</a></h2>Èíäèéñêèå ñêàçêè â èñïîëíåíèè Äìèòðèÿ Ãàéäóêà</li></ul></p>
-</span><p><a href=index7112.html?id=audio class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Аудио</h1><a href=index7112.html?id=audio class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='F4AC0.html'>Интуиция и бессознательное</a></h2></li><li><h2><a href='F4AD6.html'>Личная эффективность</a></h2></li><li><h2><a href='F4AD7.html'>Открытие бизнеса</a></h2></li><li><h2><a href='F4ADA.html'>Бизнес обучение</a></h2></li><li><h2><a href='F4ABF.html'>Работа с негативными эмоциями, страхом</a></h2></li><li><h2><a href='F4AD8.html'>Взаимоотношения с людьми</a></h2></li><li><h2><a href='F4AD9.html'>Смена профессиональной деятельности</a></h2></li><li><h2><a href='F4ABE.html'>Как эффективно учиться на тренингах?</a></h2></li><li><h2><a href='F477A.html'>Что такое коучинг? (интервью)</a></h2>Интервью с Егором Булыгиным, взятое Денисом Сычом специально для GreatCoach.ru</li><li><h2><a href='F486A.html'>Статьи и копирайтинг</a></h2>Как начать писать увлекательные статьи</li><li><h2><a href='skazki2012.html'>Индийские сказки</a></h2>Индийские сказки в исполнении Дмитрия Гайдука</li></ul></p>
+</span><p><a href=index7112.html?id=audio class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
