--- a/print7310.html
+++ b/print7310.html
@@ -2,7 +2,7 @@
 <title>Смысл жизни</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=5D2E057A-F4711-3A31474A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:55 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Что двигает нас вперед, к реализации главного урока нашей жизни, и в чем он заключается.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
