--- a/print7477.html
+++ b/print7477.html
@@ -1,10 +1,10 @@
 <html>
-<title>Çà÷åì ìíå íóæíû 100 Âàøèõ ìèëëèîíîòðåíèíãîâ?</title>
+<title>Зачем мне нужны 100 Ваших миллионотренингов?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4AC2 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Çà÷åì ìíå íóæíû 100 Âàøèõ ìèëëèîíîòðåíèíãîâ'>
-<meta name="description" content='Âèäåî-âåáèíàð: «Ìèëëèîíîòðåíèíã çà 45 äíåé».'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Зачем мне нужны 100 Ваших миллионотренингов'>
+<meta name="description" content='Видео-вебинар: «Миллионотренинг за 45 дней».'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,24 +14,24 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Çà÷åì ìíå íóæíû 100 Âàøèõ ìèëëèîíîòðåíèíãîâ?</h1><a href=index7477.html?id=F4AC2 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Íàïîìèíàþ Âàì, ÷òî âèäåî-âåáèíàð &laquo;Êàê çàðàáîòàòü 1.000.000 ðóáëåé ñ òðåíèíãà çà 45 äíåé áóäåò ïðîâîäèòüñÿ <strong>ñåãîäíÿ â 20:00-21:30 (ìñê)</strong>. È íà íåãî óæå çàðåãèñòðèðîâàëèñü <strong>áîëåå 1300 ÷åëîâåê</strong>!</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Зачем мне нужны 100 Ваших миллионотренингов?</h1><a href=index7477.html?id=F4AC2 class=slink>web-версия</a><p><span class='print'><p>
+	Напоминаю Вам, что видео-вебинар &laquo;Как заработать 1.000.000 рублей с тренинга за 45 дней будет проводиться <strong>сегодня в 20:00-21:30 (мск)</strong>. И на него уже зарегистрировались <strong>более 1300 человек</strong>!</p>
 <p>
-	...Ïîõîæå, ÷òî ýòî áóäåò ìàñøòàáíîå ñîáûòèå. È, ÷óâñòâóþ, ìû çäîðîâî ïîâåñåëèìñÿ íà íåì ;)</p>
+	...Похоже, что это будет масштабное событие. И, чувствую, мы здорово повеселимся на нем ;)</p>
 <p>
-	Â ëþáîì ñëó÷àå ÿ ïëàíèðóþ äàòü ìàêñèìóì ïðàêòè÷åñêîé èíôîðìàöèè, êîòîðóþ Âû ñìîæåòå íà÷àòü èñïîëüçîâàòü ñðàçó æå.</p>
+	В любом случае я планирую дать максимум практической информации, которую Вы сможете начать использовать сразу же.</p>
 <h1>
-	Çà÷åì ìíå íóæíû 100 Âàøèõ ìèëëèîíîòðåíèíãîâ?</h1>
+	Зачем мне нужны 100 Ваших миллионотренингов?</h1>
 <p>
-	Ó ìåíÿ åñòü îäíà çàäóìêà, äëÿ ðåàëèçàöèè êîòîðîé íåîáõîäèìî áîëåå 100 òðåíåðîâ (èëè ÒÖ), óñïåøíî ïðîäàþùèõ ñâîè òðåíèíãè. Ýòî áóäåò îñîáîå ïàðòíåðñêîå ïðåäëîæåíèå, êîòîðîå Âàì î÷åíü ïîíðàâèòñÿ âî âñåõ îòíîøåíèÿõ (à ñ ôèíàíñîâîé òî÷êè çðåíèÿ îñîáåííî ;))</p>
+	У меня есть одна задумка, для реализации которой необходимо более 100 тренеров (или ТЦ), успешно продающих свои тренинги. Это будет особое партнерское предложение, которое Вам очень понравится во всех отношениях (а с финансовой точки зрения особенно ;))</p>
 <p>
-	Íî ñåé÷àñ î íåì ãîâîðèòü ðàíî. Ñåé÷àñ íàì íóæíî, ÷òîáû â ðóññêîãîâîðÿùåì ïðîñòðàíñòâå ïîÿâèëîñü õîòÿ áû 100 òðåíåðîâ (èëè ÒÖ), ñîáèðàþùèõ ìèëëèîíîòðåíèíãè (ýòî êîëè÷åñòâî áóäåò òî÷êîé áèôóðêàöèè). È ÷åì áûñòðåå ýòî ïðîèçîéäåò, òåì, ðàçóìååòñÿ, âñåì íàì ëó÷øå. Ëåâåë-àï áóäåò îáùèé.</p>
+	Но сейчас о нем говорить рано. Сейчас нам нужно, чтобы в русскоговорящем пространстве появилось хотя бы 100 тренеров (или ТЦ), собирающих миллионотренинги (это количество будет точкой бифуркации). И чем быстрее это произойдет, тем, разумеется, всем нам лучше. Левел-ап будет общий.</p>
 <p>
-	Ïîýòîìó ÿ ñîáèðàþñü äàòü Âàì âñå íåîáõîäèìîå, ÷òîáû Âû ñìîãëè ñîáðàòü ñâîé (èëè ÷óæîé) ìèëëèîíîòðåíèíã çà 45 äíåé. Ïðèõîäèòå ñåãîäíÿ íà âåáèíàð, ÿ ðàññêàæó ÷òî è êàê íóæíî äåëàòü, ÷òîáû ýòî ïîëó÷èëîñü.</p>
+	Поэтому я собираюсь дать Вам все необходимое, чтобы Вы смогли собрать свой (или чужой) миллионотренинг за 45 дней. Приходите сегодня на вебинар, я расскажу что и как нужно делать, чтобы это получилось.</p>
 <p>
-	<a href="indexd83c.html?id=1000000-training-in-45-days">Ðåãèñòðàöèÿ íà âèäåî-âåáèíàð è ïðÿìîé ýôèð </a></p>
+	<a href="indexd83c.html?id=1000000-training-in-45-days">Регистрация на видео-вебинар и прямой эфир </a></p>
 <p style="text-align: right">
-	<em>Ñ óâàæåíèåì, Åãîð Áóëûãèí</em></p>
+	<em>С уважением, Егор Булыгин</em></p>
 <p style="text-align: right">
 	<strong>
 <script>
@@ -59,11 +59,11 @@ var idcomments_post_url = 'F4AC2.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4AC2" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -108,13 +108,13 @@ VK.Widgets.Like("vk_like", {type: "full", width: 400});
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
 <!-- AddThis Button END -->
 </strong></p>
-</span><p><a href=index7477.html?id=F4AC2 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index7477.html?id=F4AC2 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -175,7 +175,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -197,7 +197,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
