--- a/print75de.html
+++ b/print75de.html
@@ -2,7 +2,7 @@
 <title>Искусство садиться в "правильный поезд"</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F486E by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:07 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='В этой статье я хочу открыть Вам главный секрет мастерства, в какой-бы области жизни Вы к нему ни стремились. Секрет, способный дать Вам без преувеличения все что Вы хотите.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
