--- a/print791a.html
+++ b/print791a.html
@@ -2,7 +2,7 @@
 <title>Отзывы</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F05E6200-F45A7-0A75F0C1 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:14:00 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='отзывы, тренинги, нлп'>
 <meta name="description" content='Отзывы участников тренингов Егора Булыгина'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
