--- a/print7946.html
+++ b/print7946.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ïÿòü ÿçûêîâ ëþáâè</title>
+<title>Пять языков любви</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=5C03C101-F4715-F6A93AC7 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:29:06 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='ëþáîâü'>
-<meta name="description" content='Êàê ìû ïîíèìàåì, ÷òî íàñ ëþáÿò, è êàê ìû ìîæåì âûðàæàòü ñâîþ ëþáîâü, ÷òîáû íàøè ëþáèìûå ïîíèìàëè, ÷òî ìû èõ ëþáèì.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='любовь'>
+<meta name="description" content='Как мы понимаем, что нас любят, и как мы можем выражать свою любовь, чтобы наши любимые понимали, что мы их любим.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,30 +14,30 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ïÿòü ÿçûêîâ ëþáâè</h1><a href=index7946.html?id=5C03C101-F4715-F6A93AC7 class=slink>web-âåðñèÿ</a><p><span class='print'><h2><em>Ãåðè ×åïìåí </em></h2>
-<p>Êàê ìû ïîíèìàåì, ÷òî íàñ ëþáÿò, è êàê ìû ìîæåì âûðàæàòü ñâîþ ëþáîâü, ÷òîáû íàøè ëþáèìûå åå ÷óâñòîâàëè,&nbsp;à òàêæå âèäåëè è ñëûøàëè ;)<br />
-Çàìå÷àòåëüíàÿ êíèãà ñ ìíîæåñòâîì èñòîðèé èç æèçíè, â êîòîðîé ïîäðîáíî ðàññêàçûâàåòñÿ î êàæäîì ÿçûêå ëþáâè, ñïîñîáàõ åãî âûðàæåíèÿ, è î òîì, ÷åì ëþáîâü îòëè÷àåòñÿ îò âëþáëåííîñòè. Î÷åíü ðåêîìåíäóþ âñåì, êòî ëþáèò.</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Пять языков любви</h1><a href=index7946.html?id=5C03C101-F4715-F6A93AC7 class=slink>web-версия</a><p><span class='print'><h2><em>Гери Чепмен </em></h2>
+<p>Как мы понимаем, что нас любят, и как мы можем выражать свою любовь, чтобы наши любимые ее чувстовали,&nbsp;а также видели и слышали ;)<br />
+Замечательная книга с множеством историй из жизни, в которой подробно рассказывается о каждом языке любви, способах его выражения, и о том, чем любовь отличается от влюбленности. Очень рекомендую всем, кто любит.</p>
 <ul>
-    <li><a title="Ïÿòü ÿçûêîâ ëþáâè, Ãåðè ×åïìåí" href="files/5_yazikov_lubvi.doc"><span class="service"><strong>Ñêà÷àòü â ôîðìàòå word</strong></span></a></li>
-    <li><a title="Ïÿòü ÿçûêîâ ëþáâè, Ãåðè ×åïìåí" href="files/5_yazikov_lubvi.pdf"><span class="service"><strong>Ñêà÷àòü â ôîðìàòå pdf</strong></span></a></li>
+    <li><a title="Пять языков любви, Гери Чепмен" href="files/5_yazikov_lubvi.doc"><span class="service"><strong>Скачать в формате word</strong></span></a></li>
+    <li><a title="Пять языков любви, Гери Чепмен" href="files/5_yazikov_lubvi.pdf"><span class="service"><strong>Скачать в формате pdf</strong></span></a></li>
 </ul>
-<p><strong>P.S.</strong> Òàê æå ðåêîìåíäóþ ñòàòüþ-êîíñïåêò &quot;<a target="_blank" href="index93ed.html?id=F471B">ßçûêè ëþáâè</a>&quot;,&nbsp;êîòîðàÿ âêðàòöå çíàêîìèò ñ îñíîâíûìè èäåÿìè êíèãè.</p>
+<p><strong>P.S.</strong> Так же рекомендую статью-конспект &quot;<a target="_blank" href="index93ed.html?id=F471B">Языки любви</a>&quot;,&nbsp;которая вкратце знакомит с основными идеями книги.</p>
 <h3><br />
-Ñîäåðæàíèå êíèãè</h3>
-<p>Ãëàâà 1 ×òî ïðîèñõîäèò ñ ëþáîâüþ ïîñëå ñâàäüáû?<br />
-Ãëàâà 2 Ïóñòûå ñîñóäû ëþáâè<br />
-Ãëàâà 3 Âëþáëåííîñòü<br />
-Ãëàâà 4 ßçûê ëþáâè 1: Ñëîâà ïîîùðåíèÿ<br />
-Ãëàâà 5 ßçûê ëþáâè 2: Âðåìÿ<br />
-Ãëàâà 6 ßçûê ëþáâè 3: Ïîäàðêè<br />
-Ãëàâà 7 ßçûê ëþáâè 4: Ïîìîùü<br />
-Ãëàâà 8 ßçûê ëþáâè 5: Ïðèêîñíîâåíèÿ<br />
-Ãëàâà 9 Êàê óçíàòü ñâîé ÿçûê ëþáâè<br />
-Ãëàâà 10 Ëþáîâü &ndash; ýòî âûáîð<br />
-Ãëàâà 11 Ëþáîâü âñå ìåíÿåò<br />
-Ãëàâà 12 Ëþáèòü òîãî, êîãî ëþáèòü íåâîçìîæíî<br />
-Ãëàâà 13 Äåòè è ÿçûêè ëþáâè<br />
-Ãëàâà 14 Çàêëþ÷èòåëüíîå ñëîâî</p>
+Содержание книги</h3>
+<p>Глава 1 Что происходит с любовью после свадьбы?<br />
+Глава 2 Пустые сосуды любви<br />
+Глава 3 Влюбленность<br />
+Глава 4 Язык любви 1: Слова поощрения<br />
+Глава 5 Язык любви 2: Время<br />
+Глава 6 Язык любви 3: Подарки<br />
+Глава 7 Язык любви 4: Помощь<br />
+Глава 8 Язык любви 5: Прикосновения<br />
+Глава 9 Как узнать свой язык любви<br />
+Глава 10 Любовь &ndash; это выбор<br />
+Глава 11 Любовь все меняет<br />
+Глава 12 Любить того, кого любить невозможно<br />
+Глава 13 Дети и языки любви<br />
+Глава 14 Заключительное слово</p>
 <p style="text-align: center;"><span class="service"><a name='vote'></a><script type='text/javascript'>
 function light(num){
     if(num >= 1) document.getElementById('star1').className = 'active';
@@ -60,16 +60,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setupa700.html?id=5C03C101-F4715-F6A93AC7&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupf8ff.html?id=5C03C101-F4715-F6A93AC7&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup39d5.html?id=5C03C101-F4715-F6A93AC7&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup66fe.html?id=5C03C101-F4715-F6A93AC7&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup4be4.html?id=5C03C101-F4715-F6A93AC7&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupa700.html?id=5C03C101-F4715-F6A93AC7&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupf8ff.html?id=5C03C101-F4715-F6A93AC7&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup39d5.html?id=5C03C101-F4715-F6A93AC7&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup66fe.html?id=5C03C101-F4715-F6A93AC7&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup4be4.html?id=5C03C101-F4715-F6A93AC7&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -92,12 +92,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div><div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Êíèãè è ñàìîó÷èòåëè&quot;</p> <ul><li><a href='C4825A68-F46B7-F6490963.html' title='Ãëàâû 23-46'>Ïðîñòðàíñòâî ñîçíàíèÿ</a></li><li><a href='F478B.html' title='Áóìàæíàÿ êíèãà Åãîðà Áóëûãèíà, ñäåëàííàÿ íà îñíîâå ëó÷øèõ ìàòåðèàëîâ ýòîãî ñàéòà (ïî îöåíêàì ÷èòàòåëåé) è ðàññêàçûâàþùàÿ î òîì, êàê ïðîñòîé ÷åëîâåê (íå ÍËÏåð) ìîæåò ïðèìåíÿòü ÍËÏ â æèçíè äëÿ äîñòèæåíèÿ ãàðìîíèè ìåæäó ëè÷íûì óñïåõîì è ëè÷íûì ñ÷àñòüåì.'>ÍËÏ êàê îíî åñòü. Ïðàêòèêà óñïåõà.</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div><div class='relateditems'><p>Лучшие материалы раздела &quot;Книги и самоучители&quot;</p> <ul><li><a href='C4825A68-F46B7-F6490963.html' title='Главы 23-46'>Пространство сознания</a></li><li><a href='F478B.html' title='Бумажная книга Егора Булыгина, сделанная на основе лучших материалов этого сайта (по оценкам читателей) и рассказывающая о том, как простой человек (не НЛПер) может применять НЛП в жизни для достижения гармонии между личным успехом и личным счастьем.'>НЛП как оно есть. Практика успеха.</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/5C03C101-F4715-F6A93AC7" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -121,13 +121,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script>
  <br />
 </span></p>
-</span><p><a href=index7946.html?id=5C03C101-F4715-F6A93AC7 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index7946.html?id=5C03C101-F4715-F6A93AC7 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -188,7 +188,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -210,7 +210,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
