--- a/print7df1.html
+++ b/print7df1.html
@@ -2,7 +2,7 @@
 <title>Темы тренингов, мозговой штурм</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C29 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:31 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Можно воспринять эту статью как шутку, а можно и кое-что полезное для себя узать ;) Напишите, пожалуйста, в комментариях наиболее интересные вам темы (какой тренинг вы купили бы), или придумайте свою тему. Также, прочитайте чужие комментарии, и если ваша тема совпадает с чьей-то, то поставьте комментарию Лайк.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
