--- a/print7061.html
+++ b/print7061.html
@@ -2,7 +2,7 @@
 <title>Семинар Ричарда Бэндлера по DHE</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=899BAF40-F45CD-071EE3E0 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:27:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп, бессознательное'>
 <meta name="description" content='Конспект семинара.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
