--- a/print70d1.html
+++ b/print70d1.html
@@ -1,10 +1,10 @@
 <html>
-<title>Áàçîâûå òåõíîëîãèè Íîâîãî Êîäà ÍËÏ</title>
+<title>Базовые технологии Нового Кода НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=2C4D18A7-F45E1-65DD8717 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:24 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íîâûé êîä íëï'>
-<meta name="description" content='Òåõíîëîãèè Íîâîãî Êîäà ÍËÏ, ïðèâåçåííûå Äæîíîì Ãðèíäåðîì â Ìîñêâó â 2004 ãîäó, è èõ ýâîëþöèîííîå ïðîäîëæåíèå.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='новый код нлп'>
+<meta name="description" content='Технологии Нового Кода НЛП, привезенные Джоном Гриндером в Москву в 2004 году, и их эволюционное продолжение.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,14 +14,14 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Áàçîâûå òåõíîëîãèè Íîâîãî Êîäà ÍËÏ</h1><a href=index70d1.html?id=2C4D18A7-F45E1-65DD8717 class=slink>web-âåðñèÿ</a><p><span class='print'><ul><li><h2><a href='AF2890AC-F45C5-1040378E.html'>Ñîñòîÿíèå âûñîêîé ïðîäóêòèâíîñòè (High Performance State)</a></h2>Èññëåäîâàíèå ñîñòîÿíèÿ âûñîêîé ýôôåêòèâíîñòè</li><li><h2><a href='05A786A2-F45C8-2D36D89E.html'>Âíóòðåííèå êðèòåðèè ïîÿâëåíèÿ ñîñòîÿíèÿ âûñîêîé ïðîäóêòèâíîñòè</a></h2>Ïðèçíàêè, ïî êîòîðûì ìîæíî ñàìîñòîÿòåëüíî îïðåäåëèòü ïîÿâëåíèå ñîñòîÿíèÿ âûñîêîé ïðîäóêòèâíîñòè âî âðåìÿ èãðû.</li><li><h2><a href='2D85ABA5-F45C7-1638D7E6.html'>×åòûðåõøàãîâàÿ ìîäåëü ñîçäàíèÿ èçìåíåíèé</a></h2>Øàãè òåõíèêè.</li><li><h2><a href='11687B58-F45E2-8C64100A.html'>Àëôàâèò Íîâîãî Êîäà ÍËÏ</a></h2>Ïðàâèëà èãðû â îðèãèíàëüíûé Àëôàâèò Íîâîãî Êîäà ÍËÏ.</li><li><h2><a href='D07A644F-F45C6-85EAD3D8.html'>Ýëåêòðîííûé Àëôàâèò Íîâîãî Êîäà ÍËÏ</a></h2>Ïðàâèëà èãðû.</li><li><h2><a href='4D6C2789-F45E3-C91EDA9D.html'>Ñòàëêèíã</a></h2>Òåõíèêà, ïîçâîëÿþùàÿ ðàñïðîãðàììèðîâàòü áåññîçíàòåëüíûå àâòîìàòèçìû (ïàòòåðíû).</li></ul>
-</span><p><a href=index70d1.html?id=2C4D18A7-F45E1-65DD8717 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Базовые технологии Нового Кода НЛП</h1><a href=index70d1.html?id=2C4D18A7-F45E1-65DD8717 class=slink>web-версия</a><p><span class='print'><ul><li><h2><a href='AF2890AC-F45C5-1040378E.html'>Состояние высокой продуктивности (High Performance State)</a></h2>Исследование состояния высокой эффективности</li><li><h2><a href='05A786A2-F45C8-2D36D89E.html'>Внутренние критерии появления состояния высокой продуктивности</a></h2>Признаки, по которым можно самостоятельно определить появление состояния высокой продуктивности во время игры.</li><li><h2><a href='2D85ABA5-F45C7-1638D7E6.html'>Четырехшаговая модель создания изменений</a></h2>Шаги техники.</li><li><h2><a href='11687B58-F45E2-8C64100A.html'>Алфавит Нового Кода НЛП</a></h2>Правила игры в оригинальный Алфавит Нового Кода НЛП.</li><li><h2><a href='D07A644F-F45C6-85EAD3D8.html'>Электронный Алфавит Нового Кода НЛП</a></h2>Правила игры.</li><li><h2><a href='4D6C2789-F45E3-C91EDA9D.html'>Сталкинг</a></h2>Техника, позволяющая распрограммировать бессознательные автоматизмы (паттерны).</li></ul>
+</span><p><a href=index70d1.html?id=2C4D18A7-F45E1-65DD8717 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -82,7 +82,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -104,7 +104,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
