--- a/print70f7.html
+++ b/print70f7.html
@@ -2,7 +2,7 @@
 <title>О шизофрениках и энуретиках</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=BCB9A4D9-F45D7-E2557E7A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:37 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Материалы с семинара Ричарда Бэндлера по DHE.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
