--- a/print72c2.html
+++ b/print72c2.html
@@ -1,10 +1,10 @@
 <html>
-<title>Òåõíèêè</title>
+<title>Техники</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=1524DC52-F4651-2FB51D87 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:21:03 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Êîëëåêöèÿ òåõíèê ÍËÏ, ãèïíîçà è ñèñòåìíîãî ìûøëåíèÿ íà âñå ñëó÷àè æèçíè.'>
+<meta name="description" content='Коллекция техник НЛП, гипноза и системного мышления на все случаи жизни.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Òåõíèêè</h1><a href=index72c2.html?id=1524DC52-F4651-2FB51D87 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='89200782-F4653-F9CFE418.html'>Óïðàâëåíèå ñîñòîÿíèåì</a></h2>Òåõíèêè ÍËÏ, ãèïíîçà è Íîâîãî Êîäà ÍËÏ, ïîçâîëÿþùèå óïðàâëÿòü ñâîèì ýìîöèîíàëüíûì è ôèçè÷åñêèì ñîñòîÿíèåì.</li><li><h2><a href='D7DFAE57-F4665-0D74B27B'>Òåõíîëîãèÿ "Âîëøåáíàÿ ïàëî÷êà" èëè Êàê çàêàçàòü æåëàíèå êîëëåêòèâíîìó áåññîçíàòåëüíîìó</a></h2>Òåõíîëîãèÿ çàêàçà æåëàíèé äëÿ èñïîëíåíèÿ.</li><li><h2><a href='8C0408EA-F4670-FC510EA9.html'>Ñåëô-ìåíåäæìåíò (ñàìîñîâåðøåíñòâîâàíèå)</a></h2>Òåõíèêè ñàìîñòîÿòåëüíîãî ðåøåíèÿ âíóòðåííèõ çàäà÷, ðàçâèòèÿ íàâûêîâ è ëè÷íûõ êà÷åñòâ.</li><li><h2><a href='A0E5F947-F4655-5A54C351.html'>Òâîð÷åñòâî</a></h2>Òåõíèêè ñîçäàíèÿ òâîð÷åñêèõ ïðîöåññîâ.</li><li><h2><a href='6F89F2F7-F465B-94CE3C07.html'>Ñèñòåìíàÿ ðàáîòà ñ öåëÿìè</a></h2>Òåõíèêè ñèñòåìíîé ðàáîòû ñ öåëÿìè ñ èñïîëüçîâàíèåì ïàòòåðíîâ ÍËÏ è ãèïíîçà.</li></ul></p>
-</span><p><a href=index72c2.html?id=1524DC52-F4651-2FB51D87 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Техники</h1><a href=index72c2.html?id=1524DC52-F4651-2FB51D87 class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='89200782-F4653-F9CFE418.html'>Управление состоянием</a></h2>Техники НЛП, гипноза и Нового Кода НЛП, позволяющие управлять своим эмоциональным и физическим состоянием.</li><li><h2><a href='D7DFAE57-F4665-0D74B27B'>Технология "Волшебная палочка" или Как заказать желание коллективному бессознательному</a></h2>Технология заказа желаний для исполнения.</li><li><h2><a href='8C0408EA-F4670-FC510EA9.html'>Селф-менеджмент (самосовершенствование)</a></h2>Техники самостоятельного решения внутренних задач, развития навыков и личных качеств.</li><li><h2><a href='A0E5F947-F4655-5A54C351.html'>Творчество</a></h2>Техники создания творческих процессов.</li><li><h2><a href='6F89F2F7-F465B-94CE3C07.html'>Системная работа с целями</a></h2>Техники системной работы с целями с использованием паттернов НЛП и гипноза.</li></ul></p>
+</span><p><a href=index72c2.html?id=1524DC52-F4651-2FB51D87 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
