--- a/print73e6.html
+++ b/print73e6.html
@@ -2,7 +2,7 @@
 <title>Что вы пытались сказать?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F0CB3C38-F449A-60E70531 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:43 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Как-то одного американского тренера НЛП спросили: "Что дает вам право влиять на людей, не согласившихся с вами работать?"'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
