--- a/print744b.html
+++ b/print744b.html
@@ -2,7 +2,7 @@
 <title>Ветер судьбы</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=769FEBAD-F45E6-DEAF413D by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:04 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Есть люди, которые верят, что судьба каждого предопределена до последней детали. И есть люди, которые считают что судьба человека в его руках. В действительности - правы и те, и другие. '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
