--- a/print746c.html
+++ b/print746c.html
@@ -2,7 +2,7 @@
 <title>Типология систем ценностей Клэра Грейвза</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F5576ACF-F4601-3A7A13DF by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:58 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='спиральная динамика'>
 <meta name="description" content='Краткая характеристика каждого уровня Спиральной Динамики в понимании Грэйвза.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
