--- a/print77ee.html
+++ b/print77ee.html
@@ -2,7 +2,7 @@
 <title>Как ставить цели в новом году?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4877 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:08 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='цель'>
 <meta name="description" content='Как сформулировать цель, чтобы результаты превзошли наши ожидания?  Есть много нюансов при работе с целями, но эти пять правил имеют критическое значение. Если, конечно, это цель, а не целька ;)'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
