--- a/print786b.html
+++ b/print786b.html
@@ -2,7 +2,7 @@
 <title>5 ошибок, убивающих тренера (рецепт)</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4D11 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:33 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='создать тренинг, продать тренинг, продвижение тренингов'>
 <meta name="description" content='5 ошибок, убивающих тренера (рецепт)'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
