--- a/print7c5a.html
+++ b/print7c5a.html
@@ -2,7 +2,7 @@
 <title>Эта статья изменит вашу жизнь.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4E00 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:23:02 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Когда вы дочитаете эту статью до конца, ваша жизнь начнет меняться.
 Не верите? Проверьте. Только ваше желание оставить все по прежнему сможет остановить процесс...'>
