feat(encoding): reencode index8 series to utf-8

--- a/print81a7.html
+++ b/print81a7.html
@@ -1,10 +1,10 @@
 <html>
-<title>Äðåâíèé ñóíäóê Íóðè Áåÿ</title>
+<title>Древний сундук Нури Бея</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4721 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Ñóôèéñêàÿ ïðèò÷à ïðî ñóïðóæåñêóþ âåðíîñòü âî âñåõ ñìûñëàõ ýòîãî ïîíèìàíèÿ.'>
+<meta name="description" content='Суфийская притча про супружескую верность во всех смыслах этого понимания.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,28 +14,28 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Äðåâíèé ñóíäóê Íóðè Áåÿ</h1><a href=index81a7.html?id=F4721 class=slink>web-âåðñèÿ</a><p><span class='print'><p>Íóðè Áåé áûë âäóì÷èâûé è âñåìè óâàæàåìûé àôãàíåö. Îí áûë æåíàò íà æåíùèíå ãîðàçäî ìîëîæå åãî.</p>
-<p>Îäíàæäû âå÷åðîì, êîãäà îí âåðíóëñÿ äîìîé ðàíüøå îáû÷íîãî, ê íåìó ïîäîøåë åãî ïðåäàííûé ñëóãà è ñêàçàë:</p>
-<p>- Âàøà æåíà, ìîÿ ãîñïîæà âåäåò ñåáÿ ïîäîçðèòåëüíî. Ñåé÷àñ îíà íàõîäèòñÿ â ñâîåé êîìíàòå. Òàì ó íåå ñòîèò îãðîìíûé ñóíäóê, ïðèíàäëåæàâøèé ðàíüøå âàøåé áàáóøêå. Îí äîñòàòî÷íî âåëèê, ÷òîáû âìåñòèòü ÷åëîâåêà.</p>
-<p>- Îáû÷íî â íåì õðàíèëèñü òîëüêî ñòàðûå êðóæåâà.</p>
-<p>- ß äóìàþ, ñåé÷àñ â íåì åñòü ÷òî-òî åùå. Îíà íå ïîçâîëèëà ìíå, âàøåìó ñòàðîìó ñëóãå è ñîâåò÷èêó, çàãëÿíóòü â íåãî.</p>
-<p>Íóðè âîøåë â êîìíàòó æåíû è íàøåë åå â áåñïîêîéñòâå, ñèäÿùåé ïåðåä ìàññèâíûì äåðåâÿííûì ñóíäóêîì.</p>
-<p>- Íå ïîêàæåøü ëè òû ìíå, ÷òî â ýòîì ñóíäóêå? - ñïðîñèë îí.</p>
-<p>- Ýòî âñå èç-çà ïîäîçðåíèé ñëóãè? Âû ìíå íå âåðèòå?</p>
-<p>- Íå ïðîùå ëè îòêðûòü ñóíäóê, íå äóìàÿ î òîì, ÷åì ýòî âûçâàíî?</p>
-<p>- Áîþñü, ýòî íåâîçìîæíî.</p>
-<p>- Îí ÷òî, çàïåðò?</p>
-<p>- Äà.</p>
-<p>- À ãäå êëþ÷?</p>
-<p>Îíà ïîêàçàëà åìó êëþ÷ è ñêàçàëà:</p>
-<p>- Ïðîãîíèòå ñëóãó, è âû åãî ïîëó÷èòå.</p>
-<p>Íóðè ïðèêàçàë ñëóãå óéòè. Æåíùèíà ïðîòÿíóëà åìó êëþ÷ è óäàëèëàñü, ÿâíî ñìóùåííàÿ.</p>
-<p>Äîëãî ðàçìûøëÿë Íóðè Áåé. Çàòåì ïîçâàë ÷åòûðåõ ñàäîâíèêîâ èç ñâîèõ ñëóã. Âìåñòå îíè îòíåñëè íî÷üþ ñóíäóê â îòäàëåííóþ ÷àñòü ñàäà è çàêîïàëè åãî, íå îòêðûâàÿ.</p>
-<p>È ñ òåõ ïîð - îá ýòîì íè ñëîâà.</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Древний сундук Нури Бея</h1><a href=index81a7.html?id=F4721 class=slink>web-версия</a><p><span class='print'><p>Нури Бей был вдумчивый и всеми уважаемый афганец. Он был женат на женщине гораздо моложе его.</p>
+<p>Однажды вечером, когда он вернулся домой раньше обычного, к нему подошел его преданный слуга и сказал:</p>
+<p>- Ваша жена, моя госпожа ведет себя подозрительно. Сейчас она находится в своей комнате. Там у нее стоит огромный сундук, принадлежавший раньше вашей бабушке. Он достаточно велик, чтобы вместить человека.</p>
+<p>- Обычно в нем хранились только старые кружева.</p>
+<p>- Я думаю, сейчас в нем есть что-то еще. Она не позволила мне, вашему старому слуге и советчику, заглянуть в него.</p>
+<p>Нури вошел в комнату жены и нашел ее в беспокойстве, сидящей перед массивным деревянным сундуком.</p>
+<p>- Не покажешь ли ты мне, что в этом сундуке? - спросил он.</p>
+<p>- Это все из-за подозрений слуги? Вы мне не верите?</p>
+<p>- Не проще ли открыть сундук, не думая о том, чем это вызвано?</p>
+<p>- Боюсь, это невозможно.</p>
+<p>- Он что, заперт?</p>
+<p>- Да.</p>
+<p>- А где ключ?</p>
+<p>Она показала ему ключ и сказала:</p>
+<p>- Прогоните слугу, и вы его получите.</p>
+<p>Нури приказал слуге уйти. Женщина протянула ему ключ и удалилась, явно смущенная.</p>
+<p>Долго размышлял Нури Бей. Затем позвал четырех садовников из своих слуг. Вместе они отнесли ночью сундук в отдаленную часть сада и закопали его, не открывая.</p>
+<p>И с тех пор - об этом ни слова.</p>
 <p><br />
-<strong>P.S.</strong> Â ýòîé ïðèò÷å íàìíîãî áîëüøå óðîâíåé ñìûñëà, ÷åì ìîæåò ïîêàçàòüñÿ íà ïåðâûé âçãëÿä. Ïðî÷òèòå åå ÷åðåç êàêîå-òî âðåìÿ ñíîâà ;)</p>
-<p style="text-align: right;"><em>Èñòî÷íèê: Ñêàçêè Äåðâèøåé<br />
-</em><span style="font-size: smaller;"><em>Îïóáëèêîâàíî íà nlping.ru 19.01.2010 ã.<br />
+<strong>P.S.</strong> В этой притче намного больше уровней смысла, чем может показаться на первый взгляд. Прочтите ее через какое-то время снова ;)</p>
+<p style="text-align: right;"><em>Источник: Сказки Дервишей<br />
+</em><span style="font-size: smaller;"><em>Опубликовано на nlping.ru 19.01.2010 г.<br />
 </em></span></p>
 <p style="text-align: center;"><span class="service"><a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -59,16 +59,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup81ae.html?id=F4721&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup0ad8.html?id=F4721&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup58b1.html?id=F4721&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupe170.html?id=F4721&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup9403.html?id=F4721&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup81ae.html?id=F4721&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup0ad8.html?id=F4721&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup58b1.html?id=F4721&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupe170.html?id=F4721&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup9403.html?id=F4721&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -91,12 +91,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div><div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Áàéêè è ïðèò÷è&quot;</p> <ul><li><a href='11EFAB56-F4620-8C197C8C.html' title='ÍËÏåðñêàÿ áàéêà.'>Ñàìàÿ âêóñíàÿ êîíôåòà</a></li><li><a href='F47A4.html' title='Ñêàçêà äëÿ âçðîñëûõ ïðî íè÷åãî-íå-íåäåëàíèå è ñìûñë.'>Ïðèò÷à "Ãîâîðÿùàÿ ðûáà"</a></li><li><a href='F479F.html' title='Ìíîãèå èç íàñ õîòÿò íà÷àòü ÷òî-òî íîâîå, íî íå ìíîãèå ýòî äåëàþò. Ïî÷åìó? Ïîòîìó ÷òî ìû ïðèâûêëè ê òîìó ÷òî èìååì, êàêèì áû îíî íè áûëî. È ïðè ìûñëè îá èçìåíåíèÿõ ó ìíîãèõ èç íàñ ïîÿâëÿåòñÿ ñòðàõ... '>Ïðèâû÷êè, ñòðàõè è óñïåõ</a></li><li><a href='F471C.html' title='Ïðèò÷à îò Íèëà Äîíàëüäà Óîëøà ïðî òî, êàê âàæíî ïîìíèòü, êòî ìû...'>Ìàëåíüêàÿ äóøà è ñîëíöå</a></li><li><a href='8DBBC4B9-F45F5-CE624629.html' title='Ïðèò÷à èç ñáîðíèêà 101 èñòîðèÿ äçåí.'>Õîðîøåå è ïëîõîå</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div><div class='relateditems'><p>Лучшие материалы раздела &quot;Байки и притчи&quot;</p> <ul><li><a href='11EFAB56-F4620-8C197C8C.html' title='НЛПерская байка.'>Самая вкусная конфета</a></li><li><a href='F47A4.html' title='Сказка для взрослых про ничего-не-неделание и смысл.'>Притча "Говорящая рыба"</a></li><li><a href='F479F.html' title='Многие из нас хотят начать что-то новое, но не многие это делают. Почему? Потому что мы привыкли к тому что имеем, каким бы оно ни было. И при мысли об изменениях у многих из нас появляется страх... '>Привычки, страхи и успех</a></li><li><a href='F471C.html' title='Притча от Нила Дональда Уолша про то, как важно помнить, кто мы...'>Маленькая душа и солнце</a></li><li><a href='8DBBC4B9-F45F5-CE624629.html' title='Притча из сборника 101 история дзен.'>Хорошее и плохое</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4721" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -119,13 +119,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </span></p>
-</span><p><a href=index81a7.html?id=F4721 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index81a7.html?id=F4721 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -186,7 +186,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -208,7 +208,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
