--- a/print84c0.html
+++ b/print84c0.html
@@ -2,7 +2,7 @@
 <title>Мысли вслух о том, что мы слышим и о тех кто слышит нас</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=B175A726-F45EF-8E5CEA3C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:04 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='О НЛП, о репрезентативных системах, и о том, что со всем этим можно делать.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
