--- a/print89dd.html
+++ b/print89dd.html
@@ -2,7 +2,7 @@
 <title>Поиск своего предназначения и "ядро" личности</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=9B859081-F4625-4D7B65FB by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:46 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Задайте себе вопрос: "Я счастлив?", и если ваш ответ не устроит вас на все 100%, спросите себя: "А зачем я живу?".'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
