--- a/print8ec4.html
+++ b/print8ec4.html
@@ -2,7 +2,7 @@
 <title>Интуиция и логика как лебедь, рак и щука</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4740 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:19 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='интуиция, бессознательное, логика'>
 <meta name="description" content='Все, кто пробует осознанно использовать интуицию рано или поздно проходят через одну общую дилемму: кого слушать, когда ответы разные - интуицию или логику?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
