--- a/print80b3.html
+++ b/print80b3.html
@@ -2,7 +2,7 @@
 <title>Как НЛП помогло Роберту Дилтсу спасти лицо</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=016538D0-F429D-CA4ECF10 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Однажды Роберт Дилтс вместе с Ричардом Бэндлером зашли в один байкерскй бар...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
