--- a/print81c0.html
+++ b/print81c0.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ñåðãåé Âåðåâêèí</title>
+<title>Сергей Веревкин</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DE6 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:20 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Áèçíåñ-òðåíåð ñ îïûòîì áîëåå 15 ëåò. M.A. NLP, ñåðòèôèöèðîâàííûé ÍËÏ-òðåíåð.'>
+<meta name="description" content='Бизнес-тренер с опытом более 15 лет. M.A. NLP, сертифицированный НЛП-тренер.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,24 +14,24 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñåðãåé Âåðåâêèí</h1><a href=index81c0.html?id=F4DE6 class=slink>web-âåðñèÿ</a><p><span class='print'><p><img alt="" src="img/veryovkin.jpg" style="width: 200px; height: 250px; float: left; margin-left: 10px; margin-right: 10px;" /></p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Сергей Веревкин</h1><a href=index81c0.html?id=F4DE6 class=slink>web-версия</a><p><span class='print'><p><img alt="" src="img/veryovkin.jpg" style="width: 200px; height: 250px; float: left; margin-left: 10px; margin-right: 10px;" /></p>
 
-<p><span style="font-size: 14px; line-height: 16px; text-indent: 0em;">Áèçíåñ-òðåíåð ñ îïûòîì áîëåå 15 ëåò. M.A. NLP, ñåðòèôèöèðîâàííûé ÍËÏ-òðåíåð.</span></p>
+<p><span style="font-size: 14px; line-height: 16px; text-indent: 0em;">Бизнес-тренер с опытом более 15 лет. M.A. NLP, сертифицированный НЛП-тренер.</span></p>
 
-<p>Â îáùåé ñëîæíîñòè ïðîâåë áîëüøå 1000 òðåíèíãîâ ïî ïåðåãîâîðàì, ïðîäàæàì, óïðàâëåíèþ ïåðñîíàëîì.</p>
+<p>В общей сложности провел больше 1000 тренингов по переговорам, продажам, управлению персоналом.</p>
 
-<p>ÍËÏ îáó÷àëñÿ ó Äæîíà Ãðèíäåðà, Ôðýíêà Ïüþñåëèêà (îñíîâàòåëè ÍËÏ), Ýíí Ýíòóñ, Ðîáåðòà Äèëòñà, Áðàéàíà Âàíäåðõîðñòà è äðóãèõ.</p>
+<p>НЛП обучался у Джона Гриндера, Фрэнка Пьюселика (основатели НЛП), Энн Энтус, Роберта Дилтса, Брайана Вандерхорста и других.</p>
 
-<p>Ïåðâîå âûñøåå îáðàçîâàíèå òåõíè÷åñêîå, âòîðîå âûñøåå ïñèõîëîãè÷åñêîå (Èíñòèòóò «Ìåòàôîðìåéøí», Êàíàäà). Ðåãóëÿðíî ïðîõîäèò ñòàæèðîâêè è îáó÷åíèå ó âåäóùèõ çàïàäíûõ ñïåöèàëèñòîâ ïî ðàçâèòèþ ïåðñîíàëà.</p>
+<p>Первое высшее образование техническое, второе высшее психологическое (Институт «Метаформейшн», Канада). Регулярно проходит стажировки и обучение у ведущих западных специалистов по развитию персонала.</p>
 
-<p>Êëèåíòû: Marriott, Àýðîôëîò, ÌÂÖ Ñåâåðñòàëü, &Scaron;koda Russia, Óðàëñèá, Àðïèêîì, Êåðàòîí, Þíèìèëê, Áþðîêðàò, Luxoft, HelpLine, SwedWood, Êîìôèñ, Ïî÷òà Ðîññèè, Nayada, Ïÿòåðî÷êà, Inbrief, SoftLine, StepLogic, Èíòåðêîì, ÊåéÄåíñ, Ïôàéçåð, Ñåâåðåí, Àãàâà, Ïðàãìàòèê, Ìàðêîí, Ôóä Ñåðâèñ Êàïèòàë, ñåòü ñàëîíîâ Ïàëü÷èêè, Áûñòðîâ (áåç Nestle), Anderssen, Êîìóñ.</p>
-</span><p><a href=index81c0.html?id=F4DE6 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<p>Клиенты: Marriott, Аэрофлот, МВЦ Северсталь, &Scaron;koda Russia, Уралсиб, Арпиком, Кератон, Юнимилк, Бюрократ, Luxoft, HelpLine, SwedWood, Комфис, Почта России, Nayada, Пятерочка, Inbrief, SoftLine, StepLogic, Интерком, КейДенс, Пфайзер, Северен, Агава, Прагматик, Маркон, Фуд Сервис Капитал, сеть салонов Пальчики, Быстров (без Nestle), Anderssen, Комус.</p>
+</span><p><a href=index81c0.html?id=F4DE6 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -92,7 +92,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -114,7 +114,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
