--- a/print8397.html
+++ b/print8397.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ïðåäíàçíà÷åíèå è ñàìîðåàëèçàöèÿ</title>
+<title>Предназначение и самореализация</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C1F by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:21:31 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Ñåðèÿ ñòàòåé î ëè÷íîé ðåàëèçîâàííîñòè è ïðåäíàçíà÷åíèè'>
+<meta name="description" content='Серия статей о личной реализованности и предназначении'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ïðåäíàçíà÷åíèå è ñàìîðåàëèçàöèÿ</h1><a href=index8397.html?id=F4C1F class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='superpower.html'>ÑóïåðÑèëà â âàøåì òåëå: êàê íàéòè è ñîõðàíèòü êëþ÷è äîñòóïà</a></h2></li><li><h2><a href='F4C20.html'>Ýòà èñòîðèÿ ìîãëà áû ïðîèçîéòè ñ ëþáûì</a></h2>Ñ òåì, êòî ïðèâûê, ÷òî êàæäûé äåíü ïîõîæ íà ïðåäûäóùèé, âûõîäíûå ïðîëåòàþò áûñòðî, à ñ÷åò âðåìåíè èäåò óæå äàæå íå íà íåäåëè: çèìà – âåñíà – ëåòî – îñåíü – Çäðàâñòâóé, Íîâûé ãîä!</li><li><h2><a href='F4C21.html'>Ìàðøðóò. ×àñòü âòîðàÿ. ÑóïåðÑèëà ðîäîì èç äåòñòâà, èëè ïî÷åìó äåòñêèå ñêàçêè íèêîãäà íå âûéäóò èç ìîäû</a></h2></li><li><h2><a href='F4C22.html'>Ìàðøðóò. ×àñòü òðåòüÿ. 3 êëþ÷åâûõ íàâûêà ãåðîÿ èëè Êàê îáðåñòè ñâîþ ñóïåðñèëó</a></h2>Ìû ïîéäåì íà óëèöó. Â îáåäåííûé ïåðåðûâ. Âèäèøü ýòèõ ëþäåé? Ñïåøàò êóäà-òî, òîðîïÿòñÿ. Íà ëèöàõ – îçàáî÷åííîñòü è âå÷íàÿ ñêëàäêà ìåæäó áðîâåé. Ñàìîå âàæíîå – óñïåòü ïåðâûì çàíÿòü ñâîáîäíîå ìåñòî â òðàíñïîðòå èëè êàôå. Íà ëèöàõ êàê áóäòî íàïèñàíî: «Íå òðîãàé ìåíÿ!».</li><li><h2><a href='F4C23.html'>Ìàðøðóò. ×àñòü ÷åòâåðòàÿ. Ìåñòî Ñèëû: íàéòè èëè ñîçäàòü?</a></h2></li><li><h2><a href='F4C24.html'>Ìàðøðóò. ×àñòü ïÿòàÿ. Íàçàä â áóäóùåå èëè Ñàìûå âàæíûå îòâåòû â æèçíè. Èíñòðóêöèÿ ïî ïðåäíàçíà÷åíèþ.</a></h2></li></ul></p>
-</span><p><a href=index8397.html?id=F4C1F class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Предназначение и самореализация</h1><a href=index8397.html?id=F4C1F class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='superpower.html'>СуперСила в вашем теле: как найти и сохранить ключи доступа</a></h2></li><li><h2><a href='F4C20.html'>Эта история могла бы произойти с любым</a></h2>С тем, кто привык, что каждый день похож на предыдущий, выходные пролетают быстро, а счет времени идет уже даже не на недели: зима – весна – лето – осень – Здравствуй, Новый год!</li><li><h2><a href='F4C21.html'>Маршрут. Часть вторая. СуперСила родом из детства, или почему детские сказки никогда не выйдут из моды</a></h2></li><li><h2><a href='F4C22.html'>Маршрут. Часть третья. 3 ключевых навыка героя или Как обрести свою суперсилу</a></h2>Мы пойдем на улицу. В обеденный перерыв. Видишь этих людей? Спешат куда-то, торопятся. На лицах – озабоченность и вечная складка между бровей. Самое важное – успеть первым занять свободное место в транспорте или кафе. На лицах как будто написано: «Не трогай меня!».</li><li><h2><a href='F4C23.html'>Маршрут. Часть четвертая. Место Силы: найти или создать?</a></h2></li><li><h2><a href='F4C24.html'>Маршрут. Часть пятая. Назад в будущее или Самые важные ответы в жизни. Инструкция по предназначению.</a></h2></li></ul></p>
+</span><p><a href=index8397.html?id=F4C1F class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
