--- a/print8479.html
+++ b/print8479.html
@@ -2,7 +2,7 @@
 <title>Что такое наша "реальность"? Или как работает высокоуровневая манипуляция.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=9929A10C-F4299-23EFF2D2 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Человек только на 20% воспринимает информацию извне, а на 80% достраивает ее из памяти. Что определяет, какими будут эти 80%?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
