--- a/print866b.html
+++ b/print866b.html
@@ -2,7 +2,7 @@
 <title>Фиолетовые - изгнание хуже смерти</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F48A4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:00:05 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='спиральная динамика'>
 <meta name="description" content='Второй уровень Спиральной динамики - фиолетовый. Какие мотивы движут человеком на этом этапе эволюции, как он мыслит и на что готов? А также, как мы можем использовать это в лидерских целях и для манипуляции массовым сознанием этой категории людей?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
