--- a/print8757.html
+++ b/print8757.html
@@ -1,9 +1,9 @@
 <html>
-<title>Èíòóèöèÿ è áåññîçíàòåëüíîå</title>
+<title>Интуиция и бессознательное</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4AC0 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:05:06 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Èíòóèöèÿ è áåññîçíàòåëüíîå ïîäêàñò'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Интуиция и бессознательное подкаст'>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
@@ -14,33 +14,33 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Èíòóèöèÿ è áåññîçíàòåëüíîå</h1><a href=index8757.html?id=F4AC0 class=slink>web-âåðñèÿ</a><p><span class='print'><h3>
-	Êàêèì îáðàçîì íàéòè &quot;ñâîèõ&quot; ëþäåé, áëèçêèõ ïî öåííîñòÿì?</h3>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Интуиция и бессознательное</h1><a href=index8757.html?id=F4AC0 class=slink>web-версия</a><p><span class='print'><h3>
+	Каким образом найти &quot;своих&quot; людей, близких по ценностям?</h3>
 <p>
-	Ñàìûé ïðîñòîé ñïîñîá ïîëó÷èòü îòâåò - ñïèðàëüíàÿ äèíàìèêà. Íî äàæå åñëè Âû ðåøèòå ïîéòè òàêèì ïóòåì, âñå ðàâíî Âàì íóæíî áóäåò ñäåëàòü øàã ïåðâûé - ïîíÿòü, ïî êàêèì öåííîñòÿì Âû õîòèòå íàéòè ëþäåé, à çàòåì...</p>
+	Самый простой способ получить ответ - спиральная динамика. Но даже если Вы решите пойти таким путем, все равно Вам нужно будет сделать шаг первый - понять, по каким ценностям Вы хотите найти людей, а затем...</p>
 <p style="text-align: center">
 	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" height="40" width="500"><param name="movie" value="http://bigpodcast.ru/?xmlURL=http%3A%2F%2Fs.rpod.ru%2Fxml%2Faudio%2Fa216943.xml" /><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><embed allowfullscreen="true" allowscriptaccess="always" height="40" src="http://bigpodcast.ru/?xmlURL=http%3A%2F%2Fs.rpod.ru%2Fxml%2Faudio%2Fa216943.xml" type="application/x-shockwave-flash" width="500"></embed></object></p>
 <h3>
-	Êàê ìîæíî íàéòè ñâîé ñìûñë æèçíè?</h3>
+	Как можно найти свой смысл жизни?</h3>
 <p>
-	Âîïðîñ, âîëíóþùèé ìèëëèàðäû ëþäåé. Èìåííî ýòîò âîïðîñ çàñòàâëÿåò ëþäåé äâèãàòüñÿ âïåðåä, èñêàòü, ðàçâèâàòüñÿ... À ìîæåò áûòü ñìûñë íàøåé æèçíè êàê ðàç â òîì, ÷òî ìû äåëàåì?</p>
+	Вопрос, волнующий миллиарды людей. Именно этот вопрос заставляет людей двигаться вперед, искать, развиваться... А может быть смысл нашей жизни как раз в том, что мы делаем?</p>
 <p style="text-align: center">
 	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" height="40" width="500"><param name="movie" value="http://bigpodcast.ru/?xmlURL=http%3A%2F%2Fs.rpod.ru%2Fxml%2Faudio%2Fa219001.xml" /><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><embed allowfullscreen="true" allowscriptaccess="always" height="40" src="http://bigpodcast.ru/?xmlURL=http%3A%2F%2Fs.rpod.ru%2Fxml%2Faudio%2Fa219001.xml" type="application/x-shockwave-flash" width="500"></embed></object></p>
 <h3>
-	Òðàíñ: ïóòåøåñòâèå çà ïîäàðêîì</h3>
+	Транс: путешествие за подарком</h3>
 <p>
-	15-òè ìèíóòíûé òðàíñ, îðèåíòèðîâàííûé íà ðàáîòó ñ ñèìâîëàìè áåññîçíàòåëüíîãî è ïîèñê îòâåòîâ íà âîïðîñû. Äëÿ âûïîëíåíèÿ óïðàæíåíèÿ ïðîñòî ñêà÷àéòå MP3-ôàéë è ïðîñëóøàéòå åãî â ïîëíîé òèøèíå, êîìôîðòíî óñòðîèâøèñü è ðàññëàáèâøèñü. Ïåðåä ïðîñëóøèâàíèåì ìîæíî ñôîðìóëèðîâàòü âîïðîñ äëÿ îáðåòåíèÿ èíòóèòèâíîãî îòâåòà.</p>
+	15-ти минутный транс, ориентированный на работу с символами бессознательного и поиск ответов на вопросы. Для выполнения упражнения просто скачайте MP3-файл и прослушайте его в полной тишине, комфортно устроившись и расслабившись. Перед прослушиванием можно сформулировать вопрос для обретения интуитивного ответа.</p>
 <p>
-	<a href="index.html?id=77" target="_blank"><span class="service"><strong>Ñêà÷àòü ôàéë</strong></span></a> (5,7 Mb)<br />
+	<a href="index.html?id=77" target="_blank"><span class="service"><strong>Скачать файл</strong></span></a> (5,7 Mb)<br />
 	&nbsp;</p>
 <p>
-	<strong>P.S.</strong> Åñëè Âû íå çíàåòå êàê èíòåðïðåòèðîâàòü ñèìâîëû, êîòîðûå ïðèøëè Âàì, Âû ìîæåòå èñïîëüçîâàòü ìåòîäèêó, îïèñàííóþ â îíëàéí êóðñå &quot;<a href="indexf2c3.html?id=DE66AE3D-F46D7-AF324FC3" target="_blank">Ìåòîä èíòóèöèè</a>&quot;. Îáðàùàþ Âàøå âíèìàíèå, ÷òî çíà÷åíèå âñåõ ñèìâîëîâ ñóãóáî èíäèâèäóàëüíî - òî åñòü, òîëüêî Âû ñàìè ìîæåòå çíàòü, ÷òî äëÿ Âàñ îçíà÷àåò òîò èëè èíîé ñèìâîë; ðàçëè÷èÿ ó ðàçíûõ ëþäåé ìîãóò áûòü î÷åíü ñóùåñòâåíû.</p>
+	<strong>P.S.</strong> Если Вы не знаете как интерпретировать символы, которые пришли Вам, Вы можете использовать методику, описанную в онлайн курсе &quot;<a href="indexf2c3.html?id=DE66AE3D-F46D7-AF324FC3" target="_blank">Метод интуиции</a>&quot;. Обращаю Ваше внимание, что значение всех символов сугубо индивидуально - то есть, только Вы сами можете знать, что для Вас означает тот или иной символ; различия у разных людей могут быть очень существены.</p>
 <h3>
-	×åòûðå óðîâíÿ èíòóèöèè</h3>
+	Четыре уровня интуиции</h3>
 <p>
-	...èëè êàê âûãëÿäèò êîììóíèêàöèÿ ñ áåññîçíàòåëüíûì? Ôðàãìåíò çàíÿòèÿ ìàñòåð-ãðóïïû.</p>
+	...или как выглядит коммуникация с бессознательным? Фрагмент занятия мастер-группы.</p>
 <p>
-	<a href="index4cd6.html?id=4-level-intuition">Ïðîñëóøàòü çàïèñü</a></p>
+	<a href="index4cd6.html?id=4-level-intuition">Прослушать запись</a></p>
 <p>
 	<a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -64,16 +64,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setupbec9.html?id=F4AC0&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup8144.html?id=F4AC0&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupaf40.html?id=F4AC0&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup9d11.html?id=F4AC0&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup24c1.html?id=F4AC0&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupbec9.html?id=F4AC0&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup8144.html?id=F4AC0&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupaf40.html?id=F4AC0&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup9d11.html?id=F4AC0&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup24c1.html?id=F4AC0&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -96,12 +96,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div><div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Àóäèî&quot;</p> <ul><li><a href='F4AD9.html' title=''>Ñìåíà ïðîôåññèîíàëüíîé äåÿòåëüíîñòè</a></li><li><a href='F4ABF.html' title=''>Ðàáîòà ñ íåãàòèâíûìè ýìîöèÿìè, ñòðàõîì</a></li><li><a href='F4ADA.html' title=''>Áèçíåñ îáó÷åíèå</a></li><li><a href='F4ABE.html' title=''>Êàê ýôôåêòèâíî ó÷èòüñÿ íà òðåíèíãàõ?</a></li><li><a href='F4AD8.html' title=''>Âçàèìîîòíîøåíèÿ ñ ëþäüìè</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div><div class='relateditems'><p>Лучшие материалы раздела &quot;Аудио&quot;</p> <ul><li><a href='F4AD9.html' title=''>Смена профессиональной деятельности</a></li><li><a href='F4ABF.html' title=''>Работа с негативными эмоциями, страхом</a></li><li><a href='F4ADA.html' title=''>Бизнес обучение</a></li><li><a href='F4ABE.html' title=''>Как эффективно учиться на тренингах?</a></li><li><a href='F4AD8.html' title=''>Взаимоотношения с людьми</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4AC0" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -124,13 +124,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
 </p>
-</span><p><a href=index8757.html?id=F4AC0 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index8757.html?id=F4AC0 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -191,7 +191,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -213,7 +213,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
