--- a/print8994.html
+++ b/print8994.html
@@ -2,7 +2,7 @@
 <title>Сердце мира</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=CF095354-F46AE-A21BB56D by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:18 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='...Мы живем в этом мире, чтобы этому научиться - доверять мудрости вселенной. Называйте ее космическим разумом, Богом, дао, нирваной, мокшей - в основе всех религий лежит одно и то же.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
