--- a/print8a30.html
+++ b/print8a30.html
@@ -2,7 +2,7 @@
 <title>Самая вкусная конфета</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=11EFAB56-F4620-8C197C8C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:27:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='НЛПерская байка.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
