--- a/print8b1e.html
+++ b/print8b1e.html
@@ -1,9 +1,9 @@
 <html>
-<title>Ìîæåò ëè áóëêà ïðîäàâàòü?</title>
+<title>Может ли булка продавать?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A2B by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:03:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Ïî÷åìó äëÿ ìàëîãî áèçíåñà òàê âàæíî èìåòü ïðàâèëüíþ ëèíåéêó ïðîäàæ, íàöåëåííóþ íà äîëãîñðî÷íûå ïåðñïåêòèâû?'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Почему для малого бизнеса так важно иметь правильню линейку продаж, нацеленную на долгосрочные перспективы?'>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
@@ -14,33 +14,33 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ìîæåò ëè áóëêà ïðîäàâàòü?</h1><a href=index8b1e.html?id=F4A2B class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Ñàìûå ýôôåêòèâíûå ðåøåíèÿ óæå äàâíî ïðèäóìàíû. Ñòîèò ëè èçîáðåòàòü âåëîñèïåä èëè ïðîñòî èñïîëüçîâàòü ýòè ôèøêè?&nbsp;<br />
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Может ли булка продавать?</h1><a href=index8b1e.html?id=F4A2B class=slink>web-версия</a><p><span class='print'><p>
+	Самые эффективные решения уже давно придуманы. Стоит ли изобретать велосипед или просто использовать эти фишки?&nbsp;<br />
 	<br />
-	<span style="font-size: 16px;"><strong>Áóëêà - íå ãëàâíîå</strong></span><br />
+	<span style="font-size: 16px;"><strong>Булка - не главное</strong></span><br />
 	<br />
-	Ìàêäîíàëäñ èìååò îòëè÷íóþ ñèñòåìó ïðîäàæ. Êàê Âû äóìàåòå, íà ÷åì îí çàðàáàòûâàåò?<br />
+	Макдоналдс имеет отличную систему продаж. Как Вы думаете, на чем он зарабатывает?<br />
 	<br />
-	Âêóñíàÿ, ñûòíàÿ, áîëüøàÿ áóëêà, êîòîðîé î÷åíü ëåãêî ïåðåêóñèòü è çà êîòîðîé ëþäè ïðèõîäÿò &ndash; ýòî õîðîøèé âàðèàíò.Íî êîãäà Âû ñúåäàåòå ýòîò ãàìáóðãåð, Âàì óæàñíî õî÷åòñÿ ïèòü è Âû ïîêóïàåòå âìåñòå ñ ãàìáóðãåðîì ÷àé, êîôå, ñîê. È â èòîãå Âàì ïðîäàþò áîëüøå, ÷åì Âû ôèçè÷åñêè ìîæåòå ñúåñòü.<br />
+	Вкусная, сытная, большая булка, которой очень легко перекусить и за которой люди приходят &ndash; это хороший вариант.Но когда Вы съедаете этот гамбургер, Вам ужасно хочется пить и Вы покупаете вместе с гамбургером чай, кофе, сок. И в итоге Вам продают больше, чем Вы физически можете съесть.<br />
 	<br />
-	Íà ãàìáóðãåðàõ â Ìàêäîíàëäñå î÷åíü íåáîëüøîé ïðîöåíò ïðèáûëè. Íî åñëè Âû ïîñìîòðèòå íà ñòîèìîñòü ãàìáóðãåðà èëè íà ñòîèìîñòü êîëû èëè êîôå, è ñðàâíèòå ñ ñåáåñòîèìîñòüþ ãàìáóðãåðà ñåáåñòîèìîñòü êîôå èëè êîëû, âû óâèäèòå, ÷òî ðåàëüíî õîðîøàÿ ìàðæà â 90% ïîëó÷àåòñÿ êàê ðàç íà íàïèòêàõ. È íàïèòêè ëþäè íåèçáåæíî áóäóò ïîêóïàòü âìåñòå ñ åäîé. È íà ýòîì êàê ðàç Ìàêäîíàëäñ çàðàáàòûâàåò.<br />
+	На гамбургерах в Макдоналдсе очень небольшой процент прибыли. Но если Вы посмотрите на стоимость гамбургера или на стоимость колы или кофе, и сравните с себестоимостью гамбургера себестоимость кофе или колы, вы увидите, что реально хорошая маржа в 90% получается как раз на напитках. И напитки люди неизбежно будут покупать вместе с едой. И на этом как раз Макдоналдс зарабатывает.<br />
 	<br />
-	<span style="font-size: 16px;"><strong>Ñòðîéòå ñèñòåìó</strong></span><br />
+	<span style="font-size: 16px;"><strong>Стройте систему</strong></span><br />
 	<br />
-	Â èäåàëå, Âàì íåîáõîäèìî ñäåëàòü òàê, ÷òîáû Âàøè êëèåíòû çàâèñåëè îò Âàñ ïî ñèñòåìå Ìàêäîíàëäñà. À ýòî çíà÷èò, Âàì íåîáõîäèìî èìåòü öåëóþ ëèíåéêó ïðîäóêòîâ.<br />
+	В идеале, Вам необходимо сделать так, чтобы Ваши клиенты зависели от Вас по системе Макдоналдса. А это значит, Вам необходимо иметь целую линейку продуктов.<br />
 	<br />
-	Â ëþáîé ìîìåíò Âû ìîæåòå ïðåäëîæèòü î÷åíü öåííûé ïðîäóêò è îí áóäåò î÷åíü äåøåâûé, Âû ìàêñèìàëüíî ëåãêî ïîëó÷àåòå êëèåíòà. À äðóãèå ïðîäóêòû áóäóò ñèëüíî íåîáõîäèìû, íå ïðîñòî î÷åíü öåííû, à íåîáõîäèìû. Ïðè ýòîì áóäóò èìåòü î÷åíü íèçêóþ ñåáåñòîèìîñòü è ìàêñèìàëüíóþ ñòîèìîñòü.</p>
+	В любой момент Вы можете предложить очень ценный продукт и он будет очень дешевый, Вы максимально легко получаете клиента. А другие продукты будут сильно необходимы, не просто очень ценны, а необходимы. При этом будут иметь очень низкую себестоимость и максимальную стоимость.</p>
 <p>
 	&nbsp;</p>
 <p>
-	<strong>p.s</strong>. 27 &ndash; 29 àâãóñòà ÿ ïðîâåäó <a href="index3f0c.html?id=money-IQ">æèâîé òðåíèíã &laquo;Äåíåæíûé èíòåëëåêò&raquo;</a>. ß ïîìîãó âíåäðèòü òåõíèêè è èñïîëüçîâàòü èõ ìàêñèìàëüíî êà÷åñòâåííî.</p>
+	<strong>p.s</strong>. 27 &ndash; 29 августа я проведу <a href="index3f0c.html?id=money-IQ">живой тренинг &laquo;Денежный интеллект&raquo;</a>. Я помогу внедрить техники и использовать их максимально качественно.</p>
 <p>
-	Åñëè âû óæå ïîíèìàåòå, ÷òî Âû áóäåòå äåëàòü, ñåðüåçíî íàìåðåíû çàíèìàòüñÿ áèçíåñîì è çàðàáîòàòü íåñêîëüêî òûñÿ÷ äîëëàðîâ, à òî è äåñÿòêè òûñÿ÷ äîëëàðîâ &ndash; âîò òîãäà ýòîò òðåíèíã äëÿ Âàñ ïîäõîäèò.</p>
+	Если вы уже понимаете, что Вы будете делать, серьезно намерены заниматься бизнесом и заработать несколько тысяч долларов, а то и десятки тысяч долларов &ndash; вот тогда этот тренинг для Вас подходит.</p>
 <p style="text-align: right;">
 	&nbsp;</p>
 <p style="text-align: right;">
-	ñ óâàæåíèåì,<br />
-	Åãîð Áóëûãèí</p>
+	с уважением,<br />
+	Егор Булыгин</p>
 <p>
 	<a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -64,16 +64,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup84b3.html?id=F4A2B&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup05d2.html?id=F4A2B&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup6bf2.html?id=F4A2B&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupe18d.html?id=F4A2B&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupb9f9.html?id=F4A2B&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup84b3.html?id=F4A2B&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup05d2.html?id=F4A2B&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup6bf2.html?id=F4A2B&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupe18d.html?id=F4A2B&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupb9f9.html?id=F4A2B&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -97,11 +97,11 @@ function voted(){
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
 <!-- AddThis Button END --></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4A2B" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -124,13 +124,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
 </p>
-</span><p><a href=index8b1e.html?id=F4A2B class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index8b1e.html?id=F4A2B class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -191,7 +191,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -213,7 +213,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
