--- a/print8d4e.html
+++ b/print8d4e.html
@@ -1,10 +1,10 @@
 <html>
-<title>Âèäåî</title>
+<title>Видео</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=video by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:19:14 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='âèäåî, ïðåçåíòàöèè, òðåíèíã, çàïèñü'>
-<meta name="description" content='Âèäåî ìàòåðèàëû, ôðàãìåíòû òðåíèíãîâ è äðóãèå.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='видео, презентации, тренинг, запись'>
+<meta name="description" content='Видео материалы, фрагменты тренингов и другие.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Âèäåî</h1><a href=index8d4e.html?id=video class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='F48E9.html'>Ïðèò÷à "Ïðèíö è Ìàã"</a></h2>À ÷òî ÿâëÿåòñÿ Âàøèìè îñòðîâàìè è ïðèíöåññàìè?</li><li><h2><a href='F48E0.html'>Êàê âûéòè çà ïðåäåëû âîçìîæíîãî? (1)</a></h2>×àñòü ïåðâàÿ: Ïîòîê ðóëèò! Íî âûáîð òû äîëæåí ñäåëàòü ñàì. Âèäåî óðîê â ðàìêàõ òåñò-äðàéâà ïðåäñòîÿùåãî òðåíèíãà.</li><li><h2><a href='F48E1.html'>Êàê âûéòè çà ïðåäåëû âîçìîæíîãî? (2)</a></h2>Óðîâíè æèçíè. Êàê âûéòè çà ãðàíèöû òîãî, ÷òî ìû ñ÷èòàåì âîçìîæíûì?</li><li><h2><a href='F47BA.html'>Ìàíèïóëÿöèÿ</a></h2>Ïî÷åìó ëþäè ìàíèïóëèðóþò, êàê çàùèòèòüñÿ îò ýòîãî è ÷åì ìîòèâàöèÿ îòëè÷àåòñÿ îò ìàíèïóëÿöèè. Ôðàãìåíò ñ ïðåçåíòàöèè êíèãè "ÍËÏ êàê îíî åñòü".</li><li><h2><a href='F48E7.html'>Êàê âûéòè çà ïðåäåëû âîçìîæíîãî? (3)</a></h2>×àñòü òðåòüÿ: ×òî íå äàåò íàì óâèäåòü ðåøåíèÿ, êîòîðûå óæå åñòü â íàøåé ãîëîâå? È êàê ìû ìîæåì èñïîëüçîâàòü ýòè "îãðàíè÷åíèÿ" ÷òîáû îíè íàì ïîìîãàëè? Ïðî ñîñòîÿíèå "íå-çíàíèÿ" è ôèëüòðû âîñïðèÿòèÿ.</li><li><h2><a href='F47B5.html'>Êàê íå "çàëèïàòü" â ÷óæèå ðîëè è îñòàâàòüñÿ ñîáîé?</a></h2>Âèäåî ôðàãìåíò ïðåçåíòàöèè êíèãè "ÍËÏ êàê îíî åñòü. Ïðàêòèêà óñïåõà". Åãîð Áóëûãèí.</li><li><h2><a href='F47B6.html'>Ðîëè "Àâòîðà" è "Æåðòâû"</a></h2>Ôðàãìåíò ïðåçåíòàöèè êíèãè "ÍËÏ êàê îíî åñòü. Ïðàêòèêà óñïåõà". Åãîð Áóëûãèí.</li><li><h2><a href='F47A3.html'>Ñåêðåò â òåáå</a></h2>Çàðÿäèòåñü ïîçèòèâîì! ;)</li><li><h2><a href='F4885.html'>Ìóæñêîé è æåíñêèé ìîçã</a></h2>Åñëè ó Âàñ áóäåò áðàê - ó Âàñ áóäóò ïðîáëåìû. Íî ýòî íå ïðè÷èíà äëÿ òîãî ÷òîáû íå æåíèòüñÿ, ïîòîìó ÷òî...</li><li><h2><a href='F4A2C.html'>7 èëè 8?</a></h2>3 ôóíäàìåíòàëüíûõ îñíîâû èíòóöèè</li><li><h2><a href='F4A3F.html'>Êàê èçáåæàòü êðèçèñà â áèçíåñå</a></h2>Êàê íóæíî èçìåíèòü ñâîå ìûøëåíèå, ÷òîáû âûéòè íà íîâûé óðîâåíü â áèçíåñå.</li><li><h2><a href='F4A40.html'>Ðîñò êâàíòîâûì ñêà÷êîì</a></h2></li><li><h2><a href='F4ACB.html'>Èíôîêîíôåðåíöèÿ 2011 - âûñòóïëåíèå Åãîðà Áóëûãèíà</a></h2>Êàê çàðàáîòàòü ìèëëèîí ðóáëåé ñ òðåíèíãà çà 45 äíåé? Êàê ñîáðàòü òðåíèíã çà 7 äíåé âîîáùå áåç èíòåðíåòà? Êàê ïîëó÷èòü áàçó â 1500 ïîäïèñ÷èêîâ çà 4 äíÿ è ïîïóòè çàðàáîòàòü 74.000 ðóáëåé? ...À òàê æå äëÿ ïðîôåññèîíàëîâ: êàêîé òðåíä â òðåíèíãîâîì áèçíåñå íà÷èíàåò íàáèðàòü îáîðîòû â íèøå áèçíåñ-àóäèòîðèè?</li><li><h2><a href='making-training-algoritm.html'>Àëãîðèòì ñîçäàíèÿ òðåíèíãà</a></h2></li></ul></p>
-</span><p><a href=index8d4e.html?id=video class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Видео</h1><a href=index8d4e.html?id=video class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='F48E9.html'>Притча "Принц и Маг"</a></h2>А что является Вашими островами и принцессами?</li><li><h2><a href='F48E0.html'>Как выйти за пределы возможного? (1)</a></h2>Часть первая: Поток рулит! Но выбор ты должен сделать сам. Видео урок в рамках тест-драйва предстоящего тренинга.</li><li><h2><a href='F48E1.html'>Как выйти за пределы возможного? (2)</a></h2>Уровни жизни. Как выйти за границы того, что мы считаем возможным?</li><li><h2><a href='F47BA.html'>Манипуляция</a></h2>Почему люди манипулируют, как защититься от этого и чем мотивация отличается от манипуляции. Фрагмент с презентации книги "НЛП как оно есть".</li><li><h2><a href='F48E7.html'>Как выйти за пределы возможного? (3)</a></h2>Часть третья: Что не дает нам увидеть решения, которые уже есть в нашей голове? И как мы можем использовать эти "ограничения" чтобы они нам помогали? Про состояние "не-знания" и фильтры восприятия.</li><li><h2><a href='F47B5.html'>Как не "залипать" в чужие роли и оставаться собой?</a></h2>Видео фрагмент презентации книги "НЛП как оно есть. Практика успеха". Егор Булыгин.</li><li><h2><a href='F47B6.html'>Роли "Автора" и "Жертвы"</a></h2>Фрагмент презентации книги "НЛП как оно есть. Практика успеха". Егор Булыгин.</li><li><h2><a href='F47A3.html'>Секрет в тебе</a></h2>Зарядитесь позитивом! ;)</li><li><h2><a href='F4885.html'>Мужской и женский мозг</a></h2>Если у Вас будет брак - у Вас будут проблемы. Но это не причина для того чтобы не жениться, потому что...</li><li><h2><a href='F4A2C.html'>7 или 8?</a></h2>3 фундаментальных основы интуции</li><li><h2><a href='F4A3F.html'>Как избежать кризиса в бизнесе</a></h2>Как нужно изменить свое мышление, чтобы выйти на новый уровень в бизнесе.</li><li><h2><a href='F4A40.html'>Рост квантовым скачком</a></h2></li><li><h2><a href='F4ACB.html'>Инфоконференция 2011 - выступление Егора Булыгина</a></h2>Как заработать миллион рублей с тренинга за 45 дней? Как собрать тренинг за 7 дней вообще без интернета? Как получить базу в 1500 подписчиков за 4 дня и попути заработать 74.000 рублей? ...А так же для профессионалов: какой тренд в тренинговом бизнесе начинает набирать обороты в нише бизнес-аудитории?</li><li><h2><a href='making-training-algoritm.html'>Алгоритм создания тренинга</a></h2></li></ul></p>
+</span><p><a href=index8d4e.html?id=video class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -103,7 +103,7 @@ window.onload = function(){
 }());
 </script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
