--- a/print8dc2.html
+++ b/print8dc2.html
@@ -2,7 +2,7 @@
 <title>Новый Код НЛП от Джудит Делозье</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=AE1C8889-F429F-3BB5D16A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:53 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код нлп, нлп'>
 <meta name="description" content='Мастерство, Новый Код и системное НЛП. (Из выступления Джудит Делозье в NLP Group - Padington, Лондон, 19 апреля 1993 г.)'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
