--- a/print8f74.html
+++ b/print8f74.html
@@ -2,7 +2,7 @@
 <title>Управление изменениями методами Спиральной Динамики</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=D7190801-F4634-0E7186CF by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='спиральная динамика'>
 <meta name="description" content='Этапы изменений, через которые проходит система, и 6 условий, необходимых для успешных изменений.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
